@@ -1,0 +1,3 @@
+// { dg-do run }
+
+#include "../libgomp.c/target-10.c"
