@@ -1,3 +1,8 @@
+2015-03-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/libgomp.c/target-10.c: New test.
+	* testsuite/libgomp.c++/target-4.C: New test.
+
 2015-03-13  Ilya Verbin  <ilya.verbin@intel.com>
 
 	* testsuite/libgomp.fortran/declare-target-1.f90: New test.
